yaml, flag, invite using phone number
